[tool.poetry]
name = "ocra"
version = "0.1.0"
description = "Helpful utils to create OCR dataset from PDF data"
authors = ["Takao Mizuno <takao.mizuno110@gmail.com>"]
license = "Apache Software License"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
xmltodict = "^0.12.0"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
